tests/lean/alias3.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
alias3.lean:2:13 error: alias 'A' was already defined
