tests/lean/alias3.lean
alias A : Bool
alias A : Nat